# semanticFS

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
admission/: a_batch_gate.md  b_root_class_allowlist.md  z_high_risk_root_candidates.md
config/: onnx-test.toml  relevance-ai-testgen.toml  relevance-multiroot.toml  relevance-real.toml  semanticfs.sample.toml  wsl-local.toml
config/profiles/: home-projects.sample.toml  multi-root-dev-box.sample.toml  single-repo.sample.toml
crates/fuse-bridge/: Cargo.toml
crates/fuse-bridge/src/: lib.rs  linux_mount.rs
crates/indexer/: Cargo.toml
crates/indexer/src/: chunking.rs  db.rs  embedding.rs  filetype.rs  lancedb_sync.rs  lib.rs  map_enrichment.rs  map_summary.rs  symbols.rs
crates/map-engine/: Cargo.toml
crates/map-engine/src/: lib.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: lib.rs
crates/policy-guard/: Cargo.toml
crates/policy-guard/src/: lib.rs
crates/retrieval-core/: Cargo.toml
crates/retrieval-core/src/: lib.rs
crates/semanticfs-cli/: Cargo.toml
crates/semanticfs-cli/src/: benchmark.rs  main.rs
crates/semanticfs-common/: Cargo.toml
crates/semanticfs-common/src/: audit.rs  config.rs  embedding.rs  health.rs  lib.rs  retrieval.rs  runtime.rs  version.rs
docs/: README.md  agent-coordination.md  agent-prompts.md  benchmark.md  big-picture-roadmap.md  current_execution_plan.md  future-steps-log.md  implemented-v1_1.md  new-chat-handoff.md  phase3_execution_plan.md  phase3_execution_status.md  phase4_execution_plan.md  phase5_execution_plan.md  phase6_execution_plan.md  phase7_execution_plan.md  release-v1_1_0-rc1.md  runbook.md  setup_10_minute_agents.md  v1_2_execution_plan.md
governance/: sensitive_root_intake.md  trust_boundary_contract.md
intake/: a_low_risk_root_batch.md  b_domain_promotion_checklist.md  z_sensitive_root_backlog.md
inventory/: a_root_class_matrix.md  b_index_budget_policy.md  z_deferred_large_roots.md
operations/: a_agent_lookup_playbook.md  b_cache_trim_policy.md  z_unbounded_host_sweeps.md
playbooks/: domain_intake_checklist.md  watch_budgeting.md
profiles/: a_root_selection_heuristics.md  b_latency_budget_targets.md  z_future_aggressive_modes.md
scripts/: apply_config_profile.ps1  bootstrap_golden_from_repo.py  build_curated_mixed_suites.py  build_filesystem_scope_backlog.ps1  build_home_full.ps1  build_home_pilot.ps1  build_home_profile.ps1  build_home_sweep.ps1  build_phase3_domain_plan.ps1  build_query_gap_report.ps1  daytime_action_items.ps1  daytime_smoke.ps1  daytime_tune_holdout.ps1  discover_repo_candidates.ps1  drift_summary.ps1  install_local.ps1  nightly_bench.ps1  nightly_representative.ps1  onnx_embed.py  package_release.ps1  rc_preflight.ps1  rc_preflight.sh  requirements-onnx.txt  run_home_full.ps1  run_home_pilot.ps1  run_home_profile.ps1  run_home_sweep.ps1  run_profile_matrix.ps1  run_release_readiness.ps1  split_golden_suite.py  validate_wsl_fuse_session.py  wsl_run_fuse_session_validation.sh
systemd/: semanticfs-fuse.service  semanticfs-indexer.service  semanticfs-mcp.service  semanticfs-observability.service
telemetry/: a_query_reuse_budget.md  b_hotspot_triage_loop.md  z_raw_trace_backlog.md
tests/fixtures/benchmark_repo/docs/: architecture.md
tests/fixtures/benchmark_repo/src/: auth.rs  main.rs  (+1 more)
tests/retrieval_golden/: README.md  ai_testgen_repo.json  ai_testgen_repo_strict_holdout.json  ai_testgen_repo_strict_tune.json  ai_testgen_strict_bootstrap_v1.json  ai_testgen_strict_holdout.json  ai_testgen_strict_tune.json  apex_scholars_bootstrap_v1.json  apex_scholars_holdout.json  apex_scholars_tune.json  benchmark_repo.json  boilermakexii_bootstrap_v1.json  boilermakexii_holdout.json  boilermakexii_tune.json  buckit_bootstrap.json  buckit_bootstrap_v2_full.json  buckit_curated_holdout.json  buckit_curated_tune.json  buckit_holdout.json  buckit_tune.json  catapult_project_bootstrap_v1.json  catapult_project_holdout.json  catapult_project_tune.json  classifai_blogs_bootstrap_v1.json  classifai_blogs_holdout.json  classifai_blogs_tune.json  euler_r9_bootstrap_v1.json  euler_r9_holdout.json  euler_r9_tune.json  flutter_bootstrap_v1.json  flutter_bootstrap_v2_src.json  flutter_holdout.json  flutter_tools_bootstrap_v1.json  flutter_tools_holdout.json  flutter_tools_tune.json  flutter_tune.json  flutter_v2_holdout.json  flutter_v2_tune.json  labelimg_bootstrap_v1.json  labelimg_holdout.json  (+52 more)
triage/: a_warm_path_policy.md  b_cold_path_followup.md  z_unbounded_trace_dump.md
