[workspace]
members = [
  "crates/semanticfs-common",
  "crates/policy-guard",
  "crates/indexer",
  "crates/retrieval-core",
  "crates/map-engine",
  "crates/fuse-bridge",
  "crates/mcp",
  "crates/semanticfs-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["SemanticFS Contributors"]

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
globset = "0.4"
sha2 = "0.10"
walkdir = "2"
lru = "0.12"
notify = "6"
rusqlite = { version = "0.31", features = ["bundled"] }
parking_lot = "0.12"
clap = { version = "4", features = ["derive"] }
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "signal", "time"] }
futures-util = "0.3"
