[package]
name = "retrieval-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
lancedb = ["dep:lancedb", "dep:arrow-array", "dep:futures-util", "dep:tokio"]

[dependencies]
anyhow.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
semanticfs-common = { path = "../semanticfs-common" }
policy-guard = { path = "../policy-guard" }
tokio = { workspace = true, optional = true }
futures-util = { workspace = true, optional = true }
arrow-array = { version = "57", optional = true }
lancedb = { version = "0.26.2", optional = true }
